# nupic.core-legacy

./: .clang-format  .coveralls.yml  .gitattributes  .gitignore  .travis.yml  API_CHANGELOG.md  CHANGELOG.md  CMakeLists.txt  CNAME  CONTRIBUTING.md  CommonCompilerConfig.cmake  DEPENDENCIES.md  DEVELOPER_NOTES.md  Dockerfile  Doxyfile  GitVersion.yml  LICENSE.txt  Package.nuspec  README.md  RELEASE.md  RELEASE_V1_GOALS.md  UP01-NUPIC.CORE-Windows port.md  VERSION  _connections_8hpp.html  _connections_8hpp_source.html  _dimensions_8hpp.html  _dimensions_8hpp_source.html  _input_8hpp.html  _input_8hpp_source.html  _link_8hpp.html  _link_8hpp_source.html  _network_8hpp.html  _network_8hpp_source.html  _nu_p_i_c_8hpp.html  _nu_p_i_c_8hpp_source.html  _output_8hpp.html  _output_8hpp_source.html  _region_8hpp.html  _region_8hpp_source.html  _spatial_pooler_8hpp.html  (+138 more)
bindings/py/cpp_src/: CMakeLists.txt
bindings/py/src/: CMakeLists.txt
src/: CMakeLists.txt  CMakeLists.txt.copy  CombineUnixArchives.cmake  ConcatTwoFiles.cmake  ExpandStaticLib.cmake  MANIFEST.in  NupicCoreTests.cmake  NupicLibraryUtils.cmake  empty.cpp  mingw-win32.cmake  setup.py  shared_nupic_core.map  travis-mingw32.cmake  travis-mingw64.cmake
src/bindings/: PySparseTensor.cpp  algorithms.i  engine_internal.i  math.i  sparse_matrix.i  sparse_tensor.i
src/cmake/: FindCapnProto.cmake  FindExtensions.cmake  GNU.cmake  MinGW-CrossCompile-Windows.cmake
src/examples/: HelloSPTP.cpp  Hotgym.cpp  HotgymMain.cpp  Profiling.md  prototest.cpp
src/examples/algorithms/: Anomaly.cpp  AnomalyDetection.cpp  HelloSP_TP.cpp  README.md  Readme.md  VectorHelpers.hpp  csv.csv  hotgym.csv
src/examples/hotgym/: HelloSPTP.cpp  HelloSPTP.hpp  Hotgym.cpp
src/examples/hotgym_NetworkAPI/: README.md  hotgym_napi.cpp
src/examples/mnist/: MNIST_SP.cpp
src/examples/napi_sine/: README.md  napi_sine.cpp
src/examples/regions/: CMakeLists.txt  HelloRegions.cpp  helloregions.cpp
src/htm/: Version.hpp.in
src/htm/algorithms/: Anomaly.cpp  Anomaly.hpp  AnomalyLikelihood.cpp  AnomalyLikelihood.hpp  Connections.cpp  Connections.hpp  SDRClassifier.cpp  SDRClassifier.hpp  SpatialPooler.cpp  SpatialPooler.hpp  TemporalMemory.cpp  TemporalMemory.hpp
src/htm/encoders/: BaseEncoder.hpp  DateEncoder.cpp  DateEncoder.hpp  RandomDistributedScalarEncoder.cpp  RandomDistributedScalarEncoder.hpp  ScalarEncoder.cpp  ScalarEncoder.hpp  SimHashDocumentEncoder.README.md  SimHashDocumentEncoder.cpp  SimHashDocumentEncoder.hpp
src/htm/engine/: Input.cpp  Input.hpp  Link.cpp  Link.hpp  Network.cpp  Network.hpp  NuPIC.cpp  NuPIC.hpp  Output.cpp  Output.hpp  Region.cpp  Region.hpp  RegionImpl.cpp  RegionImpl.hpp  RegionImplFactory.cpp  RegionImplFactory.hpp  RegisteredRegionImpl.hpp  RegisteredRegionImplCpp.hpp  Spec.cpp  Spec.hpp  Watcher.cpp  Watcher.hpp  YAMLUtils.cpp  YAMLUtils.hpp
src/htm/ntypes/: Array.hpp  ArrayBase.cpp  ArrayBase.hpp  BasicType.cpp  BasicType.hpp  Collection.hpp  Dimensions.hpp  Scalar.cpp  Scalar.hpp  Value.cpp  Value.hpp
src/htm/os/: Directory.cpp  Directory.hpp  Env.cpp  Env.hpp  ImportFilesystem.hpp  OS.cpp  OS.hpp  OSUnix.cpp  OSWin.cpp  Path.cpp  Path.hpp  Timer.cpp  Timer.hpp
src/htm/regions/: ClassifierRegion.cpp  ClassifierRegion.hpp  DateEncoderRegion.cpp  DateEncoderRegion.hpp  RDSERegion.cpp  RDSERegion.hpp  SPRegion.cpp  SPRegion.hpp  ScalarSensor.cpp  ScalarSensor.hpp  TMRegion.cpp  TMRegion.hpp  TestNode.cpp  TestNode.hpp  VectorFile.cpp  VectorFile.hpp  VectorFileEffector.cpp  VectorFileEffector.hpp  VectorFileSensor.cpp  VectorFileSensor.hpp
src/htm/types/: Exception.hpp  Sdr.cpp  Sdr.hpp  Serializable.hpp  Types.hpp
src/htm/utils/: GroupBy.hpp  Log.hpp  LogItem.cpp  LogItem.hpp  LoggingException.cpp  LoggingException.hpp  MovingAverage.cpp  MovingAverage.hpp  Random.cpp  Random.hpp  SdrMetrics.cpp  SdrMetrics.hpp  SlidingWindow.hpp  StlIo.cpp  StlIo.hpp  Topology.cpp  Topology.hpp  VectorHelpers.hpp
src/main/algorithms/: Activity.cpp  Activity.hpp  BitHistory.cpp  BitHistory.hpp  Cells4.cpp  Cells4.hpp  ClassifierResult.cpp  ClassifierResult.hpp  CondProbTable.cpp  CondProbTable.hpp  Connections.cpp  Connections.hpp  FDRCSpatial.hpp  FDRSpatial.hpp  FastClaClassifier.cpp  FastClaClassifier.hpp  FlatSpatialPooler.cpp  FlatSpatialPooler.hpp  GaborNode.cpp  ImageSensorLite.cpp  ImageSensorLite.hpp  InSynapse.hpp  Linear.cpp  Linear.hpp  OutSynapse.cpp  OutSynapse.hpp  SPdata.proto  Segment.cpp  Segment.hpp  SegmentUpdate.cpp  SegmentUpdate.hpp  SpatialPooler.cpp  SpatialPooler.hpp  SpatialPooler.pb.cc  SpatialPooler.pb.h  SpatialPooler.proto  Svm.cpp  Svm.hpp  SvmT.hpp  linear.cpp  (+2 more)
src/main/engine/: Input.cpp  Input.hpp  Link.hpp  LinkPolicy.hpp  LinkPolicyFactory.hpp  Network.cpp  Network.hpp  NuPIC.cpp  NuPIC.hpp  Output.hpp  Region.cpp  Region.hpp  RegionImpl.hpp  RegionImplFactory.cpp  RegionImplFactory.hpp  RegionIo.cpp  RegionParameters.cpp  Spec.hpp  TestFanIn2LinkPolicy.hpp  TestNode.cpp  TestNode.hpp  UniformLinkPolicy.cpp  UniformLinkPolicy.hpp
src/main/math/: Array2D.hpp  ArrayAlgo.hpp  Convolution.hpp  DenseMatrix.hpp  Domain.hpp  Functions.hpp  GraphAlgorithms.hpp  Index.hpp  Math.hpp  NearestNeighbor.hpp  Set.hpp  SparseBinaryMatrix.hpp  SparseMatrix.hpp  SparseMatrix01.hpp  SparseMatrixAlgorithms.hpp  SparseRLEMatrix.hpp  SparseTensor.hpp  Types.hpp  Utils.hpp  array_algo.hpp  utils.hpp
src/main/ntypes/: Array.hpp  ArrayBase.cpp  ArrayBase.hpp  ArrayRef.hpp  Buffer.cpp  Buffer.hpp  BundleIO.hpp  Collection.hpp  Dimensions.cpp  Dimensions.hpp  MemParser.hpp  MemStream.hpp  NodeSet.hpp  ObjectModel.hpp  Scalar.hpp  Value.cpp  Value.hpp
src/main/os/: Directory.cpp  Directory.hpp  DynamicLibrary.cpp  DynamicLibrary.hpp  Env.cpp  Env.hpp  FStream.cpp  FStream.hpp  OS.cpp  OS.hpp  OSUnix.cpp  OSWin.cpp  Path.cpp  Path.hpp  Regex.cpp  Timer.cpp  Timer.hpp
src/main/regions/: VectorFile.cpp  VectorFile.hpp  (+2 more)
src/nta/: Version.hpp.in
src/nupic/: Version.hpp.in
src/python_support/: NumpyVector.cpp  PyArray.hpp  PythonStream.cpp  PythonStream.hpp
src/test/: CMakeLists.txt  main.cpp
(+1271 files in other folders)
